[DevTools] Fix custom formatters

Added bindRemoteObject to whitelist for namedPropertyFromDebuggerScopeExtension.
Inject remote object API on function call instead function compilation.

BUG=599884
R=dgozman@chromium.org,pfeldman@chromium.org

Review URL: https://codereview.chromium.org/1855393003

Cr-Commit-Position: refs/heads/master@{#385383}

Former-commit-id: 4dfa303ce1c90c4b0598239d88a1b02b4cc9fb8a