third_party/WebKit/Source/platform/v8_inspector/public/V8Debugger.h
@@ -46,6 +46,7 @@ public:
     static v8::Local<v8::Symbol> scopeExtensionSymbol(v8::Isolate*);
     static bool isCommandLineAPIMethod(const String16& name);
     static bool isCommandLineAPIGetter(const String16& name);
+    static bool isRemoteObjectAPIMethod(const String16& name);
 
     virtual PassOwnPtr<V8StackTrace> createStackTrace(v8::Local<v8::StackTrace>, size_t maxStackSize) = 0;
     virtual PassOwnPtr<V8StackTrace> captureStackTrace(size_t maxStackSize) = 0;
